--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body id="body">
     <canvas width="900" height="480" id="area_dibujo"></canvas>
     <br>
-    Escoja un color:&nbsp;  <input type="color" id="color">
+    &nbsp;&nbsp;Escoja un color:&nbsp;  <input type="color" id="color">
     <br>
-    Escoja el grosor:&nbsp; <select name="grosor" id="grosor">
+    &nbsp;&nbsp;Escoja el grosor:&nbsp; <select name="grosor" id="grosor">
                             <option value="2">2</option>
                             <option value="4">4</option> 
                             <option value="6">6</option> 
@@ -24,7 +24,7 @@
     <br>
     <br>
     <div></div>
-        <button id="borrador">Borrador</button> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  | Cuando sales del area de dibujo la funcion "borrador" se desactiva |
+    &nbsp; <button id="borrador">Borrador</button><button>||</button> &nbsp;&nbsp;&nbsp;&nbsp;<button>Clear</button>&nbsp;&nbsp;&nbsp;&nbsp; | Cuando sales del area de dibujo la funcion "borrador" se desactiva |
     </div>   
     
     <script src="script.js"></script>
